[gd_scene load_steps=30 format=2]

[ext_resource path="res://Grids/Control-scene.tscn" type="PackedScene" id=1]
[ext_resource path="res://FollowMouse.gd" type="Script" id=2]
[ext_resource path="res://exitbutton.gd" type="Script" id=3]
[ext_resource path="res://menu/buttons/home_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://menu/buttons/home_button_normal.png" type="Texture" id=5]
[ext_resource path="res://menu/buttons/home_button_hovered.png" type="Texture" id=6]
[ext_resource path="res://menu/buttons/newnewnewback.png" type="Texture" id=7]
[ext_resource path="res://Bricks/animated textures/particle/Flame.png" type="Texture" id=8]
[ext_resource path="res://Bricks/animated textures/particle/Explosion_Sheet.png" type="Texture" id=9]
[ext_resource path="res://levels/next_level_label.gd" type="Script" id=10]
[ext_resource path="res://levels/tutorial_label.gd" type="Script" id=11]
[ext_resource path="res://nextlvlcontrol.gd" type="Script" id=12]
[ext_resource path="res://menu/buttons/big_start_button_pressed_1.png" type="Texture" id=13]
[ext_resource path="res://menu/buttons/big_start_button_1.png" type="Texture" id=14]
[ext_resource path="res://menu/buttons/big_start_button_hovered_1.png" type="Texture" id=15]
[ext_resource path="res://Bricks/animated textures/start_menu.tres" type="Theme" id=16]
[ext_resource path="res://music/sound_on_off_control.tscn" type="PackedScene" id=17]
[ext_resource path="res://Bricks/animated textures/particle/win_particles.png" type="Texture" id=18]
[ext_resource path="res://music/391539__unlistenable__electro-win-sound.wav" type="AudioStream" id=19]
[ext_resource path="res://helping_hand.tres" type="Animation" id=20]
[ext_resource path="res://level_number.gd" type="Script" id=21]

[sub_resource type="Animation" id=4]
resource_name = "stop animation"
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../tutorial label:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="CanvasItemMaterial" id=3]
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 1
particles_anim_loop = true

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0, 0.240385, 0.514423, 0.721154, 1 )
colors = PoolColorArray( 1, 1, 1, 0, 1, 1, 1, 0.494118, 1, 1, 1, 0.819608, 1, 1, 1, 0.776471, 1, 1, 1, 0 )

[sub_resource type="Curve" id=7]
min_value = -1.0
_data = [ Vector2( 0, -0.797272 ), 0.0, 0.0, 0, 0, Vector2( 1, -0.760908 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=8]
colors = PoolColorArray( 0.482353, 0.443137, 0.901961, 0.427451, 1, 1, 1, 0.0941176 )

[sub_resource type="Curve" id=2]
min_value = -1.16
_data = [ Vector2( 0, 0.274499 ), 0.0, 0.0, 0, 0, Vector2( 0.981366, -0.3735 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.00724638, 0.630435, 0.84058, 1 )
colors = PoolColorArray( 0.915674, 0.902285, 0.3863, 1, 0.782861, 0.196073, 0.12538, 1, 0.8539, 0.573814, 0.264942, 1, 0.931299, 0.0472925, 0.25215, 1 )

[node name="Main-Node" type="Node"]

[node name="Control" parent="." instance=ExtResource( 1 )]

[node name="Sprite" type="Sprite" parent="Control"]
position = Vector2( 974.961, 872.265 )
scale = Vector2( 0.596429, 0.596429 )

[node name="tutorial_animation" type="AnimationPlayer" parent="Control/Sprite"]
"anims/helping hand" = ExtResource( 20 )
"anims/stop animation" = SubResource( 4 )

[node name="TextureRect" type="TextureRect" parent="Control"]
show_behind_parent = true
margin_left = -200.0
margin_top = -115.0
margin_right = 990.0
margin_bottom = 678.0
mouse_filter = 2
texture = ExtResource( 7 )

[node name="TextureButton" type="TextureButton" parent="Control"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 6 )
script = ExtResource( 3 )

[node name="Control" type="Control" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )

[node name="win_particles" type="CPUParticles2D" parent="Control/Control"]
material = SubResource( 3 )
position = Vector2( 1000, 524 )
emitting = false
amount = 35
lifetime = 2.0
one_shot = true
speed_scale = 2.0
explosiveness = 0.5
local_coords = false
texture = ExtResource( 18 )
emission_shape = 2
emission_rect_extents = Vector2( 800, 400 )
direction = Vector2( 0, 0 )
spread = 0.0
gravity = Vector2( 0, 0 )
scale_amount = 2.0
scale_amount_random = 0.45
color_ramp = SubResource( 5 )
hue_variation = -0.77
hue_variation_curve = SubResource( 7 )
anim_speed = 1.0

[node name="TextureButton" type="TextureButton" parent="Control/Control"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.3
anchor_bottom = 0.3
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 15 )

[node name="Label" type="Label" parent="Control/Control/TextureButton"]
anchor_left = 0.498
anchor_top = 0.5
anchor_right = 0.498
anchor_bottom = 0.5
margin_left = -219.03
margin_top = -81.0
margin_right = 656.97
margin_bottom = 224.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 16 )
text = "Следующий 
уровень"
align = 1
script = ExtResource( 10 )

[node name="win_sound" type="AudioStreamPlayer" parent="Control/Control"]
stream = ExtResource( 19 )
volume_db = -22.432

[node name="music_control" parent="Control" instance=ExtResource( 17 )]

[node name="tutorial label" type="Label" parent="Control"]
visible = false
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.1
anchor_bottom = 0.5
margin_right = 1702.0
margin_bottom = 459.0
rect_scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 16 )
text = "РАССТАВЛЯЙ КВАДРАТИКИ
 КАК НА КАРТИНКЕ СЛЕВА!
"
script = ExtResource( 11 )

[node name="level_number" type="Label" parent="Control"]
anchor_left = 0.4
anchor_top = 0.1
anchor_right = 0.4
anchor_bottom = 0.1
margin_bottom = 151.0
rect_scale = Vector2( 0.4, 0.4 )
theme = ExtResource( 16 )
script = ExtResource( 21 )

[node name="FollowMouse" type="Node2D" parent="." groups=["mouseFollowerGroup"]]
script = ExtResource( 2 )

[node name="MouseRectTexture" type="TextureRect" parent="FollowMouse"]
margin_left = -28.0
margin_top = -33.0
margin_right = 12.0
margin_bottom = 7.0
mouse_filter = 2

[node name="Particles2D" type="CPUParticles2D" parent="FollowMouse"]
emitting = false
amount = 5
speed_scale = 2.0
local_coords = false
texture = ExtResource( 8 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 30.0
initial_velocity_random = 0.2
damping = 64.32
scale_amount = 0.1
color_ramp = SubResource( 8 )
hue_variation = -0.17
hue_variation_random = 1.0
hue_variation_curve = SubResource( 2 )

[node name="boom" type="CPUParticles2D" parent="FollowMouse"]
material = SubResource( 1 )
emitting = false
amount = 14
lifetime = 0.5
one_shot = true
explosiveness = 0.5
randomness = 0.5
lifetime_randomness = 0.5
local_coords = false
texture = ExtResource( 9 )
emission_shape = 1
emission_sphere_radius = 90.04
spread = 180.0
gravity = Vector2( 0, 0 )
scale_amount = 3.0
scale_amount_random = 0.8
color_ramp = SubResource( 9 )
anim_speed = 1.0

[connection signal="pressed" from="Control/TextureButton" to="Control/TextureButton" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/Control/TextureButton" to="Control" method="_on_TextureButton_pressed"]
[connection signal="pressed" from="Control/Control/TextureButton" to="Control/Control" method="_on_TextureButton_pressed"]
